tests/compile_fails/unknown_option.rs
use dissolve_derive::Dissolve;

#[derive(Dissolve)]
struct UnknownOption {
	#[dissolved(unknown)]
	field: String,
}

fn main() {}
